fix fancybox spacing issue...actually

--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -115,5 +115,5 @@ object {
 
 // Creates odd spacing issue in the background when fancybox is open
 .compensate-for-scrollbar {
-  margin-right: 0 !important;
+  margin-right: auto !important;
 }
